--- a/Implementacion/ModuloServidor/SERVER-MODULE-SERVICES/.classpath
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-SERVICES/.classpath
@@ -13,5 +13,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/SERVER-MODULE-BUSSINESS"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
