proyecto de presentacion

--- a/Implementacion/ModuloServidor/SERVER-MODULE/.project
+++ b/Implementacion/ModuloServidor/SERVER-MODULE/.project
@@ -3,6 +3,10 @@
 	<name>SERVER-MODULE</name>
 	<comment></comment>
 	<projects>
+		<project>SERVER-MODULE-PERSISTENCE</project>
+		<project>SERVER-MODULE-BUSSINESS</project>
+		<project>SERVER-MODULE-SERVICES</project>
+		<project>SERVER-MODULE-PRESENTATION</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
