--- a/Implementacion/ModuloServidor/SERVER-MODULE/.project
+++ b/Implementacion/ModuloServidor/SERVER-MODULE/.project
@@ -6,6 +6,7 @@
 		<project>SERVER-MODULE-PERSISTENCE</project>
 		<project>SERVER-MODULE-BUSSINESS</project>
 		<project>SERVER-MODULE-SERVICES</project>
+		<project>SERVER-MODULE-PRESENTATION</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
