nuevo git ignore

--- a/Implementacion/ModuloServidor/.gitignore
+++ b/Implementacion/ModuloServidor/.gitignore
@@ -2,3 +2,9 @@ SERVER-MODULE-BUSSINESS/build/*
 SERVER-MODULE-PERSISTENCE/build/*
 SERVER-MODULE-SERVICES/build/*
 SERVER-MODULE-PRESENTATION/build/*
+SERVER-MODULE-BUSINESS/.project
+SERVER-MODULE-PERSISTENCE/.project
+SERVER-MODULE-PRESENTATION/.project
+SERVER-MODULE-SERVICES/.project
+SERVER-MODULE/.project
+
