--- a/Implementacion/ModuloServidor/.gitignore
+++ b/Implementacion/ModuloServidor/.gitignore
@@ -3,6 +3,11 @@ SERVER-MODULE-PERSISTENCE/build/classes/*
 SERVER-MODULE-SERVICES/build/classes/*
 SERVER-MODULE-PRESENTATION/build/classes/*
 
+SERVER-MODULE-BUSSINESS/build/.classpath
+SERVER-MODULE-PERSISTENCE/build/.classpath
+SERVER-MODULE-SERVICES/build/.classpath
+SERVER-MODULE-PRESENTATION/build/.classpath
+
 SERVER-MODULE-BUSSINESS/bin/build/classes/*
 SERVER-MODULE-PERSISTENCE/bin/build/classes/*
 SERVER-MODULE-SERVICES/bin/build/classes/*
@@ -13,10 +18,6 @@ SERVER-MODULE-PERSISTENCE/bin/*
 SERVER-MODULE-SERVICES/bin/*
 SERVER-MODULE-PRESENTATION/bin/*
 
-SERVER-MODULE-BUSINESS/.project
-SERVER-MODULE-PERSISTENCE/.project
-SERVER-MODULE-PRESENTATION/.project
-SERVER-MODULE-SERVICES/.project
-SERVER-MODULE/.project
+
 
 SERVER-MODULE/.settings/*
