GitIgnore con .Projects

--- a/Implementacion/ModuloServidor/.gitignore
+++ b/Implementacion/ModuloServidor/.gitignore
@@ -18,6 +18,10 @@ SERVER-MODULE-PERSISTENCE/bin/*
 SERVER-MODULE-SERVICES/bin/*
 SERVER-MODULE-PRESENTATION/bin/*
 
-
+SERVER-MODULE-BUSINESS/.project
+SERVER-MODULE-PERSISTENCE/.project
+SERVER-MODULE-PRESENTATION/.project
+SERVER-MODULE-SERVICES/.project
+SERVER-MODULE/.project
 
 SERVER-MODULE/.settings/*
