prueba gitignore ok, (creo ke al final ok)

--- a/Implementacion/ModuloServidor/.gitignore
+++ b/Implementacion/ModuloServidor/.gitignore
@@ -3,7 +3,7 @@
 Servers/*
 Servers/.settings/*
 
-RemoteSystemTempFiles/*
+RemoteSystemsTempFiles/*
 
 SERVER-MODULE-BUSSINESS/build/classes/*
 SERVER-MODULE-PERSISTENCE/build/classes/*
