--- a/Implementacion/ModuloServidor/.gitignore
+++ b/Implementacion/ModuloServidor/.gitignore
@@ -5,38 +5,38 @@ Servers/.settings/*
 
 RemoteSystemsTempFiles/*
 
-SERVER-MODULE-BUSSINESS/build/classes/*
+SERVER-MODULE-BUSINESS/build/classes/*
 SERVER-MODULE-PERSISTENCE/build/classes/*
 SERVER-MODULE-SERVICES/build/classes/*
 SERVER-MODULE-PRESENTATION/build/classes/*
 
-SERVER-MODULE-BUSSINESS/.classpath
-SERVER-MODULE-BUSSINESS/build/.classpath
+SERVER-MODULE-BUSINESS/.classpath
+SERVER-MODULE-BUSINESS/build/.classpath
 SERVER-MODULE-PERSISTENCE/build/.classpath
 SERVER-MODULE-SERVICES/build/.classpath
 SERVER-MODULE-PRESENTATION/build/.classpath
 
-SERVER-MODULE-BUSSINESS/.classpath
+SERVER-MODULE-BUSINESS/.classpath
 SERVER-MODULE-PERSISTENCE/.classpath
 SERVER-MODULE-SERVICES/.classpath
 SERVER-MODULE-PRESENTATION/.classpath
 
-SERVER-MODULE-BUSSINESS/.settings/*
+SERVER-MODULE-BUSINESS/.settings/*
 SERVER-MODULE-PERSISTENCE/.settings/*
 SERVER-MODULE-SERVICES/.settings/*
 SERVER-MODULE-PRESENTATION/.settings/*
 
-SERVER-MODULE-BUSSINESS/.settings/*
+SERVER-MODULE-BUSINESS/.settings/*
 SERVER-MODULE-PERSISTENCE/.settings/*
 SERVER-MODULE-SERVICES/.settings/*
 SERVER-MODULE-PRESENTATION/.settings/*
 
-SERVER-MODULE-BUSSINESS/bin/build/classes/*
+SERVER-MODULE-BUSINESS/bin/build/classes/*
 SERVER-MODULE-PERSISTENCE/bin/build/classes/*
 SERVER-MODULE-SERVICES/bin/build/classes/*
 SERVER-MODULE-PRESENTATION/bin/build/classes/*
 
-SERVER-MODULE-BUSSINESS/bin/*
+SERVER-MODULE-BUSINESS/bin/*
 SERVER-MODULE-PERSISTENCE/bin/*
 SERVER-MODULE-SERVICES/bin/*
 SERVER-MODULE-PRESENTATION/bin/*
