ambiente armado ok

--- a/Implementacion/ModuloServidor/.gitignore
+++ b/Implementacion/ModuloServidor/.gitignore
@@ -1,50 +1,58 @@
-.metadata/*
+/.metadata/*
 
-Servers/*
-Servers/.settings/*
+/Servers/*
+/Servers/.settings/*
 
-RemoteSystemsTempFiles/*
+/RemoteSystemsTempFiles/*
 
-SERVER-MODULE-BUSINESS/build/classes/*
-SERVER-MODULE-PERSISTENCE/build/classes/*
-SERVER-MODULE-SERVICES/build/classes/*
-SERVER-MODULE-PRESENTATION/build/classes/*
+/SERVER-MODULE-BUSINESS/.settings/org.eclipse.jdt.core.prefs
+/SERVER-MODULE-PERSISTENCE/.settings/org.eclipse.jdt.core.prefs
+/SERVER-MODULE-SERVICES/.settings/org.eclipse.jdt.core.prefs
 
-SERVER-MODULE-BUSINESS/.classpath
-SERVER-MODULE-BUSINESS/build/.classpath
-SERVER-MODULE-PERSISTENCE/build/.classpath
-SERVER-MODULE-SERVICES/build/.classpath
-SERVER-MODULE-PRESENTATION/build/.classpath
+/SERVER-MODULE-BUSINESS/.settings/*
+/SERVER-MODULE-PERSISTENCE/.settings/*
+/SERVER-MODULE-SERVICES/.settings/*
 
-SERVER-MODULE-BUSINESS/.classpath
-SERVER-MODULE-PERSISTENCE/.classpath
-SERVER-MODULE-SERVICES/.classpath
-SERVER-MODULE-PRESENTATION/.classpath
+/SERVER-MODULE-BUSINESS/build/classes/*
+/SERVER-MODULE-PERSISTENCE/build/classes/*
+/SERVER-MODULE-SERVICES/build/classes/*
+/SERVER-MODULE-PRESENTATION/build/classes/*
 
-SERVER-MODULE-BUSINESS/.settings/*
-SERVER-MODULE-PERSISTENCE/.settings/*
-SERVER-MODULE-SERVICES/.settings/*
-SERVER-MODULE-PRESENTATION/.settings/*
+/SERVER-MODULE-BUSINESS/.classpath
+/SERVER-MODULE-BUSINESS/build/.classpath
+/SERVER-MODULE-PERSISTENCE/build/.classpath
+/SERVER-MODULE-SERVICES/build/.classpath
+/SERVER-MODULE-PRESENTATION/build/.classpath
 
-SERVER-MODULE-BUSINESS/.settings/*
-SERVER-MODULE-PERSISTENCE/.settings/*
-SERVER-MODULE-SERVICES/.settings/*
-SERVER-MODULE-PRESENTATION/.settings/*
+/SERVER-MODULE-BUSINESS/.classpath
+/SERVER-MODULE-PERSISTENCE/.classpath
+/SERVER-MODULE-SERVICES/.classpath
+/SERVER-MODULE-PRESENTATION/.classpath
 
-SERVER-MODULE-BUSINESS/bin/build/classes/*
-SERVER-MODULE-PERSISTENCE/bin/build/classes/*
-SERVER-MODULE-SERVICES/bin/build/classes/*
-SERVER-MODULE-PRESENTATION/bin/build/classes/*
+/SERVER-MODULE-BUSINESS/.settings/*
+/SERVER-MODULE-PERSISTENCE/.settings/*
+/SERVER-MODULE-SERVICES/.settings/*
+/SERVER-MODULE-PRESENTATION/.settings/*
 
-SERVER-MODULE-BUSINESS/bin/*
-SERVER-MODULE-PERSISTENCE/bin/*
-SERVER-MODULE-SERVICES/bin/*
-SERVER-MODULE-PRESENTATION/bin/*
+/SERVER-MODULE-BUSINESS/.settings/*
+/SERVER-MODULE-PERSISTENCE/.settings/*
+/SERVER-MODULE-SERVICES/.settings/*
+/SERVER-MODULE-PRESENTATION/.settings/*
 
-SERVER-MODULE-BUSINESS/.project
-SERVER-MODULE-PERSISTENCE/.project
-SERVER-MODULE-PRESENTATION/.project
-SERVER-MODULE-SERVICES/.project
-SERVER-MODULE/.project
-SERVER-MODULE/.settings/*
+/SERVER-MODULE-BUSINESS/bin/build/classes/*
+/SERVER-MODULE-PERSISTENCE/bin/build/classes/*
+/SERVER-MODULE-SERVICES/bin/build/classes/*
+/SERVER-MODULE-PRESENTATION/bin/build/classes/*
+
+/SERVER-MODULE-BUSINESS/bin/*
+/SERVER-MODULE-PERSISTENCE/bin/*
+/SERVER-MODULE-SERVICES/bin/*
+/SERVER-MODULE-PRESENTATION/bin/*
+
+/SERVER-MODULE-BUSINESS/.project
+/SERVER-MODULE-PERSISTENCE/.project
+/SERVER-MODULE-PRESENTATION/.project
+/SERVER-MODULE-SERVICES/.project
+/SERVER-MODULE/.project
+/SERVER-MODULE/.settings/*
 
