--- a/Implementacion/ModuloServidor/SERVER-MODULE-PERSISTENCE/.classpath
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PERSISTENCE/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 7.1 Runtime">
 		<attributes>
-			<attribute name="owner.project.facets" value="jpt.jpa;jst.ejb"/>
+			<attribute name="owner.project.facets" value="jst.ejb"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-7-oracle">
