Arreglo de bug en alta de contenido. Mejoras en interfaz de administracion. Validaciones del lado de cliente en casos de uso varios en administracion.

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/WEB-INF/web.xml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/WEB-INF/web.xml
@@ -89,6 +89,9 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
         <param-value>Development</param-value>
     </context-param>
     
+    
+    
+    <!-- LANZADO DE PROCESOS AUTOMATICOS -->
     <listener>
         <listener-class>tecinf.presentacion.procesos.InicioProcesos</listener-class>
     </listener>
